Criando listas ordenadas

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
     <p>Conteúdo da aula 03</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime beatae odit consectetur dolores animi, exercitationem delectus explicabo impedit reprehenderit eligendi ipsa voluptatibus? Doloribus quasi neque eaque exercitationem repellendus error quo.
 <!-- DIVISOR DE Conteúdo -->
-<hr>gi
+<hr>
+<!-- LISTAS ORDENADAS -->
+        <ol type="I"> 
+            <li>Conteúdo aula 01</li>
+            <li>Conteúdo aula 02</li>
+            <li>Conteúdo aula 03</li>
+        </ol>
+
+        <ol>
+            <li>Conteúdo aula 01</li>
+            <li>Conteúdo aula 02</li>
+            <li>Conteúdo aula 03</li>
+        </ol>
+        <hr>
 <!-- FINAL DO CORPO DA PÁGINA -->
 </body>
 
