adicionando listas não ordenadas

--- a/index.html
+++ b/index.html
@@ -44,7 +44,26 @@
             <li>Conteúdo aula 03</li>
         </ol>
         <hr>
-<!-- FINAL DO CORPO DA PÁGINA -->
+
+        <!-- LISTAS NÃO ORDENADAS -->
+        <ul>
+            <li>Conteúdo do vídeo 01</li>  
+            <li>Conteúdo do vídeo 02</li>
+            <li>Conteúdo do vídeo 03</li>          
+        </ul>
+<!-- square = quadradinho -->
+<!-- circle = bolinha vazia -->
+        <ul type="circle">
+            <li>Conteúdo do vídeo 01</li>  
+            <li>Conteúdo do vídeo 02</li>
+            <li>Conteúdo do vídeo 03</li>          
+        </ul>
+<hr>
+
+
+
+
+        <!-- FINAL DO CORPO DA PÁGINA -->
 </body>
 
 
