--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         </ul>
 <hr>
 
-
-
+<!-- MANIPULANDO IMAGENS -->
+<img src="./Imagem.jpg" alt="Imagem do carro" title="linda" width="400"/>
 
         <!-- FINAL DO CORPO DA PÁGINA -->
 </body>
