Adicionando usuario e senha

--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 <!-- MANIPULANDO IMAGENS -->
 <img src="./Imagem.jpg" alt="Imagem do carro" title="linda" width="400"/>
 
+<!-- FORMULARIOS -->
+<h2>Acesso Alunos</h2>
+<form action="dados.html">
+    <input type="text" placeholder="Digite seu usuário" required/>
+    <input type="password" placeholder="Digite sua senha" required/>
+    <button type="submit">Enviar</button>
+</form>
+
         <!-- FINAL DO CORPO DA PÁGINA -->
 </body>
 
