--- a/index.html
+++ b/index.html
@@ -71,6 +71,32 @@
     <button type="submit">Enviar</button>
 </form>
 
+<!-- INPUTS PERSONALIZADOS -->
+
+<form>
+    <fieldset>
+        <legend>Tipos de Inputs</legend>
+        <p>Input de texto: <input type="text"></p>
+        <p>Input de senha: <input type="password"></p>
+        <p>Input de checkbox:<input type="checkbox"></p>
+        <p>Input de Radio: <input type="radio"></p>
+        <p>Input de range: <input type="range"></p>
+        <p>Input de submit: <input type="submit"></p>
+        <p>Input de data: <input type="date"></p>
+        <p>Input de cor: <input type="color"></p>
+        <p>Input de arquivo: <input type="file"></p>
+        <p>Input de numero: <input type="number"></p>
+        <p>Input de numero personalizado: <input type="number" min="1" max="5"></p>
+        <p>Input de reset: <input type="reset"></p>
+    </fieldset>
+    <h2>Selecione uma linguagem</h2>
+    <select name="select">
+        <option HTML></option>
+        <option CSS></option>
+        <option JAVASCRIPT></option>
+    </select>
+</form>
+
         <!-- FINAL DO CORPO DA PÁGINA -->
 </body>
 
